[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Background/@wash_hands_poster_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Posters/WashHandsPoster.gd" type="Script" id=2]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Body_Over"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 3.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.101961, 0.101961, 0.101961, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="WashHandsPoster" type="Area2D"]
collision_layer = 16
collision_mask = 8
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="."]
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 25.9421, 55.1942, 35.8416, 43.8804, 36.9023, -52.6396, -38.0511, -52.2861, -36.9904, 55.9013 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Body_Over = SubResource( 1 )
anims/Idle = SubResource( 2 )

[node name="InstructionLabel" type="Label" parent="."]
margin_left = -52.0
margin_top = -80.0
margin_right = 60.0
margin_bottom = -63.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "<Enter> to Inspect"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_WashHandsPoster_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_WashHandsPoster_body_exited"]
